@@ -4,6 +4,7 @@ BUG: Fixed a bug that would prevent from using <prop:> tag in skins (Qiang)
 BUG: Fixed a typo in TControl::setCustomData() (Qiang)
 ENH: Ticket#336 - Speed up TSqliteCache with LIMIT SQL clause (Qiang)
 ENH: Ticket#348 - Added THead.ShortcutIcon (Qiang)
+ENH: Ticket#349 - Derived control classes now show trace logs when databinding (Qiang)
 ENH: TListControl.SelectedValues and SelectedIndices can now be set before databinding (Qiang)
 ENH: Upgrade Scriptaculous javascript library to 1.6.2 (Wei)
 ENH: Uses uncompressed javascript in debug mode. (Wei)
